<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:foregroundGravity="center"
    >

    <TextView
        android:id="@+id/questionView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/question"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/twoDigits"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center"
            android:text="@string/two_digits"
            android:textColor="#000000"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/threeDigits"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/three_digits"
            android:textColor="#000000"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/fourDigits"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/four_digits"
            android:textColor="#000000"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="40dp"
        android:text="@string/start"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>